--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "lib-flexible": "^0.3.2",
     "lodash": "^4.17.20",
     "lodash.assign": "^4.2.0",
+    "mescroll.js": "^1.4.2",
     "mint-ui": "^2.2.13",
     "moment": "^2.24.0",
     "qr-code-with-logo": "^1.1.0",
     "qrcode": "^1.4.4",
     "qrcodejs2": "0.0.2",
     "qs": "^6.6.0",
+    "swiper": "^6.4.15",
     "vant": "^2.11.0",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
