--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "better-scroll": "^1.12.6",
+    "bignumber.js": "^9.0.1",
     "clipboard": "^2.0.4",
     "crypto-js": "^4.0.0",
     "echarts": "^4.9.0",
