--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "postdevbuild": "node build/build.js dev"
   },
   "dependencies": {
+    "@zkty-team/x-engine-module-ui": "^0.1.13",
     "axios": "^0.21.1",
     "better-scroll": "^1.12.6",
     "bignumber.js": "^9.0.1",
