--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "postdevbuild": "node build/build.js dev"
   },
   "dependencies": {
-    "@zkty-team/x-engine-module-ui": "^0.1.13",
     "@zkty-team/x-engine-module-localstorage": "^0.1.13",
+    "@zkty-team/x-engine-module-ui": "^0.1.13",
     "axios": "^0.21.1",
     "better-scroll": "^1.12.6",
     "bignumber.js": "^9.0.1",
@@ -44,6 +44,7 @@
     "qs": "^6.6.0",
     "swiper": "^6.4.15",
     "vant": "^2.11.0",
+    "vconsole": "^3.4.0",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
     "vue-i18n": "^8.11.2",
