--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@zkty-team/x-engine-module-localstorage": "^0.1.13",
+    "@zkty-team/x-engine-module-nav": "^0.1.13",
     "@zkty-team/x-engine-module-ui": "^0.1.13",
     "axios": "^0.21.1",
     "better-scroll": "^1.12.6",
