--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "dev": "node build/base.env.build.js",
     "postdev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    "build": "rimraf app && node build/base.env.build.js",
+    "build:app": "rimraf app && node build/base.env.build.js",
     "postbuild": "node build/build.js && node config/zip.js",
     "devbuild": "node build/base.env.build.js",
-    "postdevbuild": "node build/build.js dev"
+    "postdevbuild": "node build/build.js dev",
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@zkty-team/x-engine-module-localstorage": "^0.1.13",
@@ -21,6 +25,9 @@
     "@zkty-team/x-engine-module-ui": "^0.1.13",
     "@zkty-team/x-engine-module-yjzdbill": "^0.1.12",
     "axios": "^0.21.1",
+    "babel-plugin-lodash": "^3.3.4",
+    "babel-plugin-transform-vue-jsx": "^3.7.0",
+    "babel-preset-es2015": "^6.24.1",
     "better-scroll": "^1.12.6",
     "bignumber.js": "^9.0.1",
     "clipboard": "^2.0.4",
@@ -42,6 +49,7 @@
     "mescroll.js": "^1.4.2",
     "mint-ui": "^2.2.13",
     "moment": "^2.24.0",
+    "patch-package": "^6.2.2",
     "qr-code-with-logo": "^1.1.0",
     "qrcode": "^1.4.4",
     "qrcodejs2": "0.0.2",
@@ -49,6 +57,7 @@
     "swiper": "^6.4.15",
     "vant": "^2.11.0",
     "vconsole": "^3.8.1",
+    "vconsole-webpack-plugin": "^1.6.1",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
     "vue-i18n": "^8.11.2",
@@ -60,24 +69,18 @@
     "weixin-js-sdk": "^1.6.0"
   },
   "devDependencies": {
-    "archiver": "^3.1.1",
-    "@babel/core": "^7.4.3",
-    "@babel/preset-env": "^7.4.3",
-    "autoprefixer": "^7.1.2",
-    "babel-core": "^6.22.1",
-    "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-import": "^1.11.0",
-    "babel-plugin-lodash": "^3.3.4",
-    "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-transform-vue-jsx": "^3.5.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.3.2",
-    "babel-preset-es2015-ie": "^6.7.0",
-    "babel-preset-stage-2": "^6.22.0",
+    "@vue/cli-plugin-babel": "~4.4.0",
+    "@vue/cli-plugin-eslint": "~4.4.0",
+    "@vue/cli-service": "~4.4.0",
+    "babel-eslint": "^10.1.0",
+    "babel-plugin-import": "^1.13.0",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "chalk": "^2.0.1",
+    "compression-webpack-plugin": "5.0.2",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.2.2",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^3.2.0",
@@ -100,12 +103,7 @@
     "url-loader": "^0.5.8",
     "vue-loader": "^15.7.2",
     "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.5.2",
-    "webpack": "^4.41.2",
-    "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^4.1.0"
+    "vue-template-compiler": "^2.5.2"
   },
   "engines": {
     "node": ">= 6.0.0",
