--- a/package.json
+++ b/package.json
@@ -25,9 +25,6 @@
     "@zkty-team/x-engine-module-ui": "^0.1.13",
     "@zkty-team/x-engine-module-yjzdbill": "^0.1.12",
     "axios": "^0.21.1",
-    "babel-plugin-lodash": "^3.3.4",
-    "babel-plugin-transform-vue-jsx": "^3.7.0",
-    "babel-preset-es2015": "^6.24.1",
     "better-scroll": "^1.12.6",
     "bignumber.js": "^9.0.1",
     "clipboard": "^2.0.4",
@@ -74,10 +71,16 @@
     "@vue/cli-service": "~4.4.0",
     "babel-eslint": "^10.1.0",
     "babel-plugin-import": "^1.13.0",
+    "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-transform-remove-console": "^6.9.4",
+    "babel-plugin-transform-vue-jsx": "^3.7.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
     "chalk": "^2.0.1",
     "compression-webpack-plugin": "5.0.2",
     "copy-webpack-plugin": "^4.0.1",
+    "core-js": "^3.15.2",
     "css-loader": "^0.28.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
@@ -91,7 +94,7 @@
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
     "postcss-import": "^11.0.0",
-    "postcss-loader": "^2.0.8",
+    "postcss-loader": "^6.1.1",
     "postcss-url": "^7.2.1",
     "px2rem-loader": "^0.1.9",
     "rimraf": "^2.6.0",
@@ -108,6 +111,32 @@
   "engines": {
     "node": ">= 6.0.0",
     "npm": ">= 3.0.0"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "globals": {
+      "BigInt": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "rules": {
+      "no-console": "off",
+      "no-debugger": "off",
+      "no-unused-vars": "off",
+      "no-useless-escape": "off",
+      "no-undef": "off",
+      "no-prototype-builtins": "off",
+      "no-unreachable":"off",
+      "no-redeclare":"off"
+    }
   },
   "browserslist": [
     "> 1%",
