--- a/package.json
+++ b/package.json
@@ -71,42 +71,27 @@
     "@vue/cli-service": "~4.4.0",
     "babel-eslint": "^10.1.0",
     "babel-plugin-import": "^1.13.0",
-    "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-transform-remove-console": "^6.9.4",
+    "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-transform-vue-jsx": "^3.7.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
-    "chalk": "^2.0.1",
     "compression-webpack-plugin": "5.0.2",
-    "copy-webpack-plugin": "^4.0.1",
-    "core-js": "^3.15.2",
-    "css-loader": "^0.28.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "file-loader": "^1.1.4",
-    "friendly-errors-webpack-plugin": "^1.6.1",
-    "html-webpack-plugin": "^3.2.0",
-    "lodash-webpack-plugin": "^0.11.5",
-    "mini-css-extract-plugin": "^0.8.0",
-    "node-notifier": "^5.1.2",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
-    "ora": "^1.2.0",
-    "portfinder": "^1.0.13",
+    "http-proxy-middleware": "^1.0.5",  
+    "core-js": "^3.15.2",
+    "css-loader": "^0.28.0",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^6.1.1",
     "postcss-url": "^7.2.1",
     "px2rem-loader": "^0.1.9",
-    "rimraf": "^2.6.0",
-    "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
-    "uglifyjs-webpack-plugin": "^1.1.1",
-    "url-loader": "^0.5.8",
-    "vue-loader": "^15.7.2",
-    "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.5.2"
+    "vue-template-compiler": "^2.6.11",
+    "vux-loader": "^1.2.9"
   },
   "engines": {
     "node": ">= 6.0.0",
