--- a/package.json
+++ b/package.json
@@ -96,7 +96,9 @@
     "globals": {
       "BigInt": true
     },
-    "extends": [],
+    "extends": [
+      "eslint:recommended"
+    ],
     "parserOptions": {
       "parser": "babel-eslint"
     },
