--- a/package.json
+++ b/package.json
@@ -48,14 +48,14 @@
     "vant": "^2.11.0",
     "vconsole": "^3.8.1",
     "vconsole-webpack-plugin": "^1.6.1",
-    "vue": "^2.6.11",
-    "vue-router": "^3.1.3",
-    "vuex": "^3.5.1",
+    "vue": "2.6.11",
     "vue-awesome-swiper": "^3.1.3",
     "vue-i18n": "^8.11.2",
     "vue-lazyload": "^1.2.6",
+    "vue-router": "^3.1.3",
     "vue-video-player": "^5.0.2",
-    "vuedraggable": "^2.23.2",   
+    "vuedraggable": "^2.23.2",
+    "vuex": "^3.5.1",
     "weixin-js-sdk": "^1.6.0"
   },
   "devDependencies": {
