--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@zkty-team/x-engine-module-share": "^0.1.13",
     "@zkty-team/x-engine-module-ui": "^0.1.13",
     "@zkty-team/x-engine-module-yjzdbill": "^0.1.12",
+    "autoprefixer": "^10.2.6",
     "axios": "^0.21.1",
     "better-scroll": "^1.12.6",
     "bignumber.js": "^9.0.1",
