--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "vant": "^2.11.0",
     "vconsole": "^3.8.1",
     "vconsole-webpack-plugin": "^1.6.1",
-    "vue": "2.6.11",
+    "vue": "^2.5.2",
+    "vue-template-compiler": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
     "vue-i18n": "^8.11.2",
     "vue-lazyload": "^1.2.6",
@@ -82,7 +83,6 @@
     "shelljs": "^0.7.6",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
-    "vue-template-compiler": "^2.6.11",
     "vux-loader": "^1.2.9"
   },
   "engines": {
