--- a/package.json
+++ b/package.json
@@ -46,16 +46,17 @@
     "qrcode": "^1.4.4",
     "qrcodejs2": "0.0.2",
     "qs": "^6.6.0",
+    "sa-sdk-javascript": "^1.18.2",
     "swiper": "^6.4.15",
     "vant": "^2.11.0",
     "vconsole": "^3.2.0",
     "vconsole-webpack-plugin": "^1.6.1",
     "vue": "^2.5.2",
-    "vue-template-compiler": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
     "vue-i18n": "^8.11.2",
     "vue-lazyload": "^1.2.6",
     "vue-router": "^3.1.3",
+    "vue-template-compiler": "^2.5.2",
     "vue-video-player": "^5.0.2",
     "vuedraggable": "^2.23.2",
     "vuex": "^3.5.1",
@@ -85,7 +86,7 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vux-loader": "^1.2.9",
-    "copy-webpack-plugin":"^4.6.0"
+    "copy-webpack-plugin": "^4.6.0"
   },
   "engines": {
     "node": ">= 6.0.0",
