--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@zkty-team/x-engine-module-share": "^0.1.13",
     "@zkty-team/x-engine-module-ui": "^0.1.13",
     "@zkty-team/x-engine-module-yjzdbill": "^0.1.12",
-    "autoprefixer": "^10.2.6",
+    "autoprefixer": "8.0.0",
     "axios": "^0.21.1",
     "better-scroll": "^1.12.6",
     "bignumber.js": "^9.0.1",
@@ -51,11 +51,11 @@
     "vconsole": "^3.2.0",
     "vconsole-webpack-plugin": "^1.6.1",
     "vue": "^2.5.2",
-    "vue-template-compiler": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
     "vue-i18n": "^8.11.2",
     "vue-lazyload": "^1.2.6",
     "vue-router": "^3.1.3",
+    "vue-template-compiler": "^2.5.2",
     "vue-video-player": "^5.0.2",
     "vuedraggable": "^2.23.2",
     "vuex": "^3.5.1",
@@ -74,6 +74,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "compression-webpack-plugin": "5.0.2",
+    "copy-webpack-plugin": "^4.6.0",
     "core-js": "^3.15.2",
     "css-loader": "^0.28.0",
     "eslint": "^6.7.2",
@@ -84,8 +85,7 @@
     "shelljs": "^0.7.6",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
-    "vux-loader": "^1.2.9",
-    "copy-webpack-plugin":"^4.6.0"
+    "vux-loader": "^1.2.9"
   },
   "engines": {
     "node": ">= 6.0.0",
