--- a/.env.development
+++ b/.env.development
@@ -6,7 +6,8 @@ NODE_ENV = development
 # http://mall-uat-app-linli.timesgroup.cn:8200/times-center-trade/swagger-ui.html
 # uat环境：http://mall-uat-api-linli.timesgroup.cn
 
-VUE_APP_BASE_API= 'https://member-uat-members-linli.timesgroup.cn:8080'
+VUE_APP_BASE_API= 'https://mall-uat-app-linli.timesgroup.cn'
+VUE_APP_GROUPBUY_API= 'https://mall-uat-app-linli.timesgroup.cn'
 
 # vue-cli uses the VUE_CLI_BABEL_TRANSPILE_MODULES environment variable,
 # to control whether the babel-plugin-dynamic-import-node plugin is enabled.
