--- a/.env.production
+++ b/.env.production
@@ -8,8 +8,5 @@ NODE_ENV = production
 # k8s指向域名反向代理 times-center-trade:8200
 
 BASE_URL = '/'
-VUE_APP_BASE_API= 'https://member-prod-members-linli.timesgroup.cn:8080'
-VUE_APP_TST = 'https://mall-prod-api-linli.timesgroup.cn:8200'
-VUE_APP_TSM = 'https://mall-prod-api-linli.timesgroup.cn:8100'
-VUE_APP_API = 'https://mall-prod-api-linli.timesgroup.cn'
-VUE_APP_REDICTURL = 'https://mall-prod-app-linli.timesgroup.cn:9001'
+VUE_APP_BASE_API= 'https://mall-prod-app-linli.timesgroup.cn'
+VUE_APP_GROUPBUY_API= 'https://mall-prod-app-linli.timesgroup.cn'
