--- a/.env.staging
+++ b/.env.staging
@@ -9,4 +9,5 @@ NODE_ENV = staging
 # tct uat 旧的接口地址 
 
 BASE_URL = '/'
-VUE_APP_BASE_API= 'https://member-uat-members-linli.timesgroup.cn:8080'
+VUE_APP_BASE_API= 'https://mall-uat-app-linli.timesgroup.cn'
+VUE_APP_GROUPBUY_API= 'https://mall-uat-app-linli.timesgroup.cn'
