--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@zkty-team/x-engine-module-share": "^0.1.13",
     "@zkty-team/x-engine-module-ui": "^0.1.13",
     "@zkty-team/x-engine-module-yjzdbill": "^0.1.12",
-    "autoprefixer": "8.0.0",
     "axios": "^0.21.1",
     "better-scroll": "^1.12.6",
     "bignumber.js": "^9.0.1",
@@ -67,6 +66,7 @@
     "@vue/cli-plugin-babel": "~4.4.0",
     "@vue/cli-plugin-eslint": "~4.4.0",
     "@vue/cli-service": "~4.4.0",
+    "autoprefixer": "^8.0.0",
     "babel-eslint": "^10.1.0",
     "babel-plugin-import": "^1.13.0",
     "babel-plugin-lodash": "^3.3.4",
@@ -81,6 +81,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "http-proxy-middleware": "^1.0.5",
+    "postcss-loader": "^6.1.1",
     "postcss-px-to-viewport": "^1.1.1",
     "postcss-pxtorem": "^5.1.1",
     "shelljs": "^0.7.6",
