--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,6 @@
 # just a flag
 ENV = development
+VUE_APP_ENV = development
 NODE_ENV = development
 
 # base api
@@ -7,6 +8,7 @@ NODE_ENV = development
 # uat环境：http://mall-uat-api-linli.timesgroup.cn
 
 VUE_APP_BASE_API= 'https://mall-uat-app-linli.timesgroup.cn'
+VUE_APP_BASE_PROD_API= 'https://mall-prod-app-linli.timesgroup.cn'
 VUE_APP_GROUPBUY_API= 'https://mall-uat-app-linli.timesgroup.cn'
 
 # vue-cli uses the VUE_CLI_BABEL_TRANSPILE_MODULES environment variable,
