我的订单自建商城拼接服务商城

--- a/.env.development
+++ b/.env.development
@@ -10,6 +10,8 @@ NODE_ENV = development
 VUE_APP_BASE_API= 'https://mall-uat-app-linli.timesgroup.cn'
 VUE_APP_BASE_PROD_API= 'https://mall-prod-app-linli.timesgroup.cn'
 VUE_APP_GROUPBUY_API= 'https://mall-uat-app-linli.timesgroup.cn'
+VUE_APP_TMASS_API= 'https://mall-uat-api-linli.timesgroup.cn:1443'
+VUE_APP_TMASS_APP= 'https://mall-uat-app-linli.timesgroup.cn:1443'
 
 # vue-cli uses the VUE_CLI_BABEL_TRANSPILE_MODULES environment variable,
 # to control whether the babel-plugin-dynamic-import-node plugin is enabled.
