--- a/.env.production
+++ b/.env.production
@@ -11,3 +11,5 @@ NODE_ENV = production
 BASE_URL = '/'
 VUE_APP_BASE_API= 'https://mall-prod-app-linli.timesgroup.cn'
 VUE_APP_GROUPBUY_API= 'https://mall-prod-app-linli.timesgroup.cn'
+VUE_APP_TMASS_API= 'https://mall-prod-api-linli.timesgroup.cn:8200'
+VUE_APP_TMASS_APP= 'https://mall-prod-app-linli.timesgroup.cn:9001'
