uat配置服务商城的域名

--- a/.env.staging
+++ b/.env.staging
@@ -12,5 +12,5 @@ NODE_ENV = staging
 BASE_URL = '/'
 VUE_APP_BASE_API= 'https://mall-uat-app-linli.timesgroup.cn'
 VUE_APP_GROUPBUY_API= 'https://mall-uat-app-linli.timesgroup.cn'
-VUE_APP_TMASS_API= 'https://mall-uat-api-linli.timesgroup.cn:1443' #服务商城
-VUE_APP_TMASS_APP= 'https://mall-uat-app-linli.timesgroup.cn:1443' #服务商城
+VUE_APP_TMASS_API= 'https://mall-uat-api-linli.timesgroup.cn:1443'
+VUE_APP_TMASS_APP= 'https://mall-uat-app-linli.timesgroup.cn:1443'
