--- a/.env.development
+++ b/.env.development
@@ -10,6 +10,10 @@ NODE_ENV = development
 VUE_APP_BASE_API= 'https://mall-uat-app-linli.timesgroup.cn'
 VUE_APP_BASE_PROD_API= 'https://mall-prod-app-linli.timesgroup.cn'
 VUE_APP_GROUPBUY_API= 'https://mall-uat-app-linli.timesgroup.cn'
+VUE_APP_TMASS_API= 'https://mall-uat-api-linli.timesgroup.cn:1443'
+VUE_APP_TMASS_APP= 'https://mall-uat-app-linli.timesgroup.cn:1443'
+VUE_APP_DISTR_APP= 'https://mall-uat-app-linli.timesgroup.cn:8001'
+VUE_APP_CENTER_APP= 'http://m-center-uat.linli.timesgroup.cn'
 
 # vue-cli uses the VUE_CLI_BABEL_TRANSPILE_MODULES environment variable,
 # to control whether the babel-plugin-dynamic-import-node plugin is enabled.
