--- a/.env.staging
+++ b/.env.staging
@@ -15,4 +15,4 @@ VUE_APP_GROUPBUY_API= 'https://mall-uat-app-linli.timesgroup.cn'
 VUE_APP_TMASS_API= 'https://mall-uat-api-linli.timesgroup.cn:1443'
 VUE_APP_TMASS_APP= 'https://mall-uat-app-linli.timesgroup.cn:1443'
 VUE_APP_DISTR_APP= 'https://mall-uat-app-linli.timesgroup.cn:8001'
-VUE_APP_CENTER_APP= 'https://member-uat-members-linli.timesgroup.cn:50001'
+VUE_APP_CENTER_APP= 'https://m-center-uat-linli.timesgroup.cn'                         
