--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
+    "@zkty-team/x-engine-module-camera": "^0.1.20",
     "@zkty-team/x-engine-module-localstorage": "^0.1.13",
     "@zkty-team/x-engine-module-nav": "^0.1.20",
     "@zkty-team/x-engine-module-router": "^0.1.20",
