--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@zkty-team/x-engine-module-camera": "^0.1.20",
+    "@zkty-team/x-engine-module-device": "^0.1.20",
     "@zkty-team/x-engine-module-localstorage": "^0.1.13",
     "@zkty-team/x-engine-module-nav": "^0.1.20",
     "@zkty-team/x-engine-module-router": "^0.1.20",
