--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "liqiang <623057062@qq.com>",
   "private": true,
   "scripts": {
+    "serve:build": "vue-cli-service serve --mode production",
     "serve": "vue-cli-service serve",
     "build:staging": "vue-cli-service build --mode staging",
     "build": "vue-cli-service build",
